<resources>

    <string name="app_name">SpanishTalk</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="main_page">主界面</string>
    <string name="return_btn">返回</string>
    <string name="confirm">确定</string>
    <string name="confirm_delete">是否删除</string>
    <string name="cancel">取消</string>
    <string name="search">搜索</string>
    
    <string name="sms">短信</string>
    <string name="sms_send_label">短信将发送给: </string>
    <string name="sms_sent">短信发送成功</string>
    <string name="sms_sent_error">短信无法发送, 请检查手机设备是否正常</string>
    <string name="sms_deliver_error">短信无法发送，请检查号码是否正确或者短信内容过长</string>
    <string name="invalid_phone_number">号码无效</string>
    
    
    <string name="title_activity_questions">问题列表</string>
    <string name="login_required">请重新登录</string>
    <string name="server_connection_error">服务器连接超时</string>
    <string name="login_form_error">请填入正确的Email跟密码</string>
    <string name="register_form_error">请填入正确的注册信息</string>
    <string name="network_error">请检查手机网络连接是否正确</string>
    
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>
    <string name="username">用户名</string>
    <string name="email">Email</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="reg_hint_email">daniel@example.com</string>
    <string name="reg_hint_username">请输入4个以上英文字符</string>
    <string name="reg_hint_password">请输入至少4位密码</string>
    <string name="reg_hint_confirm_password">确认密码</string>
    <string name="click_register_button">注册</string>
    <string name="click_login_button">登录</string>
    <string name="click_answer_button">回答</string>
    <string name="incorrect_login_info">请填写好正确的用户名跟密码</string>
    <string name="disconnect_network">网络连接不上</string>
    <string name="incorrect_email">请填写正确 Email</string>
    <string name="incorrect_username">请填写正确的用户名</string>
    <string name="incorrect_password">请填写正确的密码</string>
    <string name="incorrect_confirm_password">请填写正确的重复密码</string>
    <string name="answer_content_required">请填写内容</string>
    <string name="new_question_required">请填写标题跟内容</string>
    <string name="title_activity_question">提问</string>
    <string name="question_title">标题</string>
    <string name="question_content">请填写提问内容</string>
    <string name="answer_content">请填写回答内容</string>
    <string name="click_question_button">确定</string>
    <string name="title_activity_question_show">当前问题</string>
    <string name="title_activity_question_list">问题列表</string>
    <string name="my_questions">我的问题</string>
    <string name="refresh_questions">随便看看</string>
    <string name="ask_question">提问</string>
    <string name="loading">正在加载 &#8230;</string>
    <string name="empty_data">服务器没有返回数据 &#8230;</string>
    <string name="be_sent">发送成功</string>
    <string name="confirm_btn">确定</string>
    <string name="send_btn">发送</string>
    <string name="answers_for_count">回应</string>
    <string name="cancel_btn">取消</string>
    <string name="display">总共 %2$s, 当前 %1$s</string>
    <string name="first">首页</string>
    <string name="previous">前一页</string>
    <string name="next">下一页</string>
    <string name="last">最后</string>
    <string name="title_activity_answer">回答问题</string>
    <string name="title_activity_contact">选择联系人</string>

</resources>