<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/body" >

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    style="@style/head_bar" >
	
	    <Button
	        android:id="@+id/button1"
	        style="@style/head_bar_button_go_back_register"
	        android:onClick="click_headbar_button_back" />
	
	</RelativeLayout>

	<LinearLayout
	    style="@style/padding_10_body"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
 
        <EditText
            android:id="@+id/question_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/question_title"
            android:inputType="text" />
        
        <EditText
            android:id="@+id/question_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    		android:minHeight="300dip"
            android:ems="10"
            android:hint="@string/question_content"
            android:gravity="top"
            android:inputType="textMultiLine" >

	        <requestFocus />
	    </EditText>
	    
        
        <Button
            android:id="@+id/link_to_question"
            style="@style/login_layout_button"
            android:text="@string/click_question_button"
            android:onClick="post_question" />

 
	    
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/reg_error_show"
	    style="@style/padding_10_body"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >

	    <TextView
	        android:id="@+id/reg_network_error"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/disconnect_network"
	        android:visibility="gone" />

	    <TextView
	        android:id="@+id/reg_email_error"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/incorrect_email"
	        android:visibility="gone" />

	    

	</LinearLayout>

</LinearLayout>