<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/body" >

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    style="@style/head_bar" >
	
	    <Button
	        android:id="@+id/button1"
	        style="@style/head_bar_button_go_back_register"
	        android:onClick="click_headbar_button_back" />
	
	</RelativeLayout>

	<LinearLayout
	    style="@style/padding_10_body"
	    android:layout_width="match_parent" >

 
        <EditText
            android:id="@+id/register_edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        
        <EditText
           android:id="@+id/register_edittext_name"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:textColorHint="#000"
           android:hint="@string/username"
           android:layout_marginTop="5dp"
           android:imeOptions="actionDone"
       />
        
        
        <EditText
           android:id="@+id/register_edittext_password"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:textColorHint="#000"
           android:hint="@string/password"
           android:inputType="textPassword"
           android:layout_marginTop="5dp"
           android:imeOptions="actionDone"
       />
        
        
        <EditText
           android:id="@+id/register_edittext_affirm_password"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:textColorHint="#000"
           android:hint="@string/confirm_password"
           android:inputType="textPassword"
           android:layout_marginTop="5dp"
           android:imeOptions="actionDone"
       />
        
        
        <Button
            android:id="@+id/register_button"
            style="@style/login_layout_button"
            android:text="@string/click_register_button" />

 
	    
	</LinearLayout>

</LinearLayout>