<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/body" >
    
    
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/topQuestionMenu"
        style="@style/head_bar" >

        <Button
            style="@style/head_bar_button_go_back_register"
            android:id="@+id/my_question_btn"
            android:onClick="clickMyQuestions"
            android:text="@string/my_questions" />

        <Button
            style="@style/head_bar_button_logout"
            android:layout_alignParentRight="true"
            android:layout_marginRight="80dp"
            android:id="@+id/all_questions_btn"
            android:onClick="clickAllQuestions"
            android:text="@string/all_questions" />

        <Button
            style="@style/head_bar_button_logout"
            android:id="@+id/ask_question_btn"
            android:onClick="clickAskQuestion"
            android:text="@string/ask_question" />
        
    </RelativeLayout>
    
     

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/topQuestionMenu"
        android:layout_above="@+id/buttonfirst"
        android:drawSelectorOnTop="false"  >
    </ListView>
    
    <TextView
        android:id="@+id/list_notice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/topQuestionMenu"
        android:layout_above="@+id/buttonfirst"
        android:textSize="16dp"
        android:text="@string/empty_data"
        android:gravity="center"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:indeterminateOnly="true" />

    <Button
        android:id="@+id/buttonfirst"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:enabled="true"
        android:onClick="first"
        android:text="@string/first" />

    <Button
        android:id="@+id/buttonprev"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/buttonfirst"
        android:enabled="true"
        android:onClick="previous"
        android:text="@string/previous" />

    <Button
        android:id="@+id/buttonlast"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:enabled="true"
        android:onClick="last"
        android:text="@string/last" />

    <Button
        android:id="@+id/buttonnext"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/buttonlast"
        android:enabled="true"
        android:onClick="next"
        android:text="@string/next" />

    <TextView
        android:id="@+id/displaying"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@android:id/list"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/buttonnext"
        android:layout_toRightOf="@+id/buttonprev"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="13sp" />

</RelativeLayout>