<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/body" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/head_bar" >

        <Button
            android:id="@+id/showRegisterBtn"
            style="@style/head_bar_button_right"
            android:layout_alignParentRight="true"
            android:onClick="showRegister"
            android:text="@string/click_register_button" />
    </RelativeLayout>

    <LinearLayout
        style="@style/padding_10_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColorHint="#000" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:indeterminateOnly="true"
            android:visibility="gone" />

        <Button
            android:id="@+id/linkToLogin"
            style="@style/login_layout_button"
            android:onClick="doLogin"
            android:text="@string/click_login_button" />
    </LinearLayout>

</LinearLayout>