<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
 <LinearLayout
        android:id="@+id/question_menus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ask_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clickAskQuestion"
            android:text="@string/ask_question" />

        <Button
            android:id="@+id/my_questions_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clickMyQuestions"
            android:text="@string/my_questions" />

        <Button
            android:id="@+id/all_questions_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clickAllQuestions"
            android:text="@string/refresh_questions"
            android:textColor="#a2a" />
            
    </LinearLayout>

</LinearLayout>