<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/body" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/head_bar" >

        <Button
            android:id="@+id/button1"
            style="@style/head_bar_button_go_back_register"
            android:onClick="clickGoBack" />
        
        <Button
            android:id="@+id/link_to_question"
            style="@style/head_bar_button_logout"
            android:text="@string/send_btn"
            android:onClick="postQuestion" />
        
    </RelativeLayout>

    <LinearLayout
        style="@style/padding_10_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/question_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/question_title"
            android:inputType="text" />

        <EditText
            android:id="@+id/question_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/question_content"
            android:inputType="textMultiLine"
            android:minHeight="300dip" >

            <requestFocus />
        </EditText>

       
    </LinearLayout>

</LinearLayout>